重构程序，设置单独gameState对象

--- a/sweep.html
+++ b/sweep.html
@@ -6,15 +6,19 @@
     </head>
 
     <body>
+        <div class="game-info">
+            <div class="remaining"></div>
+            <div class="padding"></div>
+            <div class="timer"></div>
+        </div>
         <div class="menu">
             <div id="primary" class="btn">初级</div>
             <div id="middle" class="btn">中级</div>
             <div id="high" class="btn">高级</div>
+            <div id="restrat" class="btn">重新开始</div>
         </div>
 
-        <table id="mine-field">
-
-        </table>        
+        <table id="mine-field"></table>        
 
         <script src="script.js"></script>
     </body>
