--- a/sweep.html
+++ b/sweep.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="cn">
     <head>
+        <meta  charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <div class="game-info">
             <div class="remaining"></div>
+            <div class="padding"></div>
+            <div class="message"></div>
             <div class="padding"></div>
             <div class="timer"></div>
         </div>
