游戏初始化

--- a/sweep.html
+++ b/sweep.html
@@ -18,7 +18,7 @@
             <div id="primary" class="btn">初级</div>
             <div id="middle" class="btn">中级</div>
             <div id="high" class="btn">高级</div>
-            <div id="restrat" class="btn">重新开始</div>
+            <div id="restart" class="btn">重新开始</div>
         </div>
 
         <table id="mine-field"></table>        
